core/Examples/Errors/errors.k
<type> a <is> b;
<type> b <is> c;
<type> c <is> d;
<type> d <is> b;

